vlib/v/checker/tests/fn_var.vv
mut f := fn (i int) u8 {}
f = 4
mut p := &f
p = &[f]
_ = p
i := 0
println(i)
f = fn (mut a []int) {
	println(i)
}
